data/all_generated_tests/raw_wast_tests/br_table_IncorrectHandlingofControlFlowAcrossModuleBoundaries_2522.wast
;; 1. **Test Description:**    - Test an imported function call that performs a `br_table` with multiple target labels and a default label. Verify that branching out of the function respects the label boundaries and does not corrupt the stack upon return.    - **Constraint:** Ensures that `br_table` respects the boundary between module-independent function calls and labels.    - **Control Flow Boundary Check:** Validate that the `br_table` instruction properly handles the stack when returning from an imported function.

(assert_invalid
  (module
    (import "env" "external_func" (func $external_func (param i32)))
    (func $test_func
      (call $external_func (i32.const 1))
      (block (result i32)
        (i32.const 0) (br_table 0 0 (i32.const 0) (i64.const 0))
      )
      (i32.const 1)
    )
  )
  "type mismatch"
)